=== 5.58.0 (2022-07-01)

* Support :disable_split_materialized Database option on MySQL to work around optimizer bug in MariaDB 10.5+ affecting association tests (jeremyevans)

* Add Dataset#merge* methods to support MERGE statement on PostgreSQL 15+, MSSQL, Oracle, DB2, H2, HSQLDB, and Derby (jeremyevans)

=== 5.57.0 (2022-06-01)

* Make Database#create_function on PostgreSQL accept :parallel option (bananarne) (#1870)

* Add support for :on_update_current_timestamp column option on MySQL (jeremyevans)

* Add is_distinct_from extension with support for the IS DISTINCT FROM operator (jeremyevans)

=== 5.56.0 (2022-05-01)

* Make alter_table add_column/add_foreign_key methods support :index option to create an index on the column (jeremyevans)

* Support creation of STRICT tables on SQLite 3.37.0+ via create_table :strict option (jeremyevans)

* Add sqlite_json_ops extension for DSL support for JSON functions and operators added in SQLite 3.38.0 (jeremyevans)

* Recognize "INTEGER" type same as "integer" type in the schema dumper, helpful on SQLite 3.37.0+ (jeremyevans)

=== 5.55.0 (2022-04-01)

* Support :setup_regexp_function Database option in the sqlite adapter to allow the use of regexps when querying (jeremyevans)

* Add auto_restrict_eager_graph plugin for automatically disallow eager_graph with associations needing but lacking graph options (jeremyevans)

* Fix placeholder literalizer optimization for dataset aggregate methods on a model dataset (belousovAV) (#1847, #1848)

=== 5.54.0 (2022-03-01)

* Add enum plugin for treating columns as enums in a model (jeremyevans) (#1839)

=== 5.53.0 (2022-02-01)

* Make Dataset#_sql_comment private when using the Database sql_comments extension (jeremyevans)

* Fix prepared statements in the mysql2 adapter to reuse native prepared statements (jeremyevans) (#1832)

* Support H2 version 2+ in the jdbc/h2 adapter (jeremyevans) (#1817)
